# qt-and-flutter

./: README.md
qt_and_flutter_plugin/: README.md  pubspec.yaml
qt_and_flutter_plugin/example/: README.md  pubspec.yaml
qt_and_flutter_plugin/example/lib/: main.dart
qt_and_flutter_plugin/example/test/: widget_test.dart
qt_and_flutter_plugin/example/windows/: CMakeLists.txt
qt_and_flutter_plugin/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
qt_and_flutter_plugin/example/windows/runner/: Runner.rc  main.cpp
qt_and_flutter_plugin/lib/: qt_and_flutter_plugin.dart
qt_and_flutter_plugin/test/: qt_and_flutter_plugin_test.dart
qt_and_flutter_plugin/windows/: CMakeLists.txt  qt_and_flutter_plugin.cpp
qt_and_flutter_plugin/windows/include/qt_and_flutter_plugin/: qt_and_flutter_plugin.h
